; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_disaster.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_disaster.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"fatal signal: %s\00", align 1
@NSIG = common dso_local global i32 0, align 4
@sys_siglist = common dso_local global i8** null, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"unknown signal\00", align 1
@STALL_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @disaster to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @disaster(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @NSIG, align 4
  %5 = icmp ult i32 %3, %4
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i8**, i8*** @sys_siglist, align 8
  %8 = load i32, i32* %2, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i8*, i8** %7, i64 %9
  %11 = load i8*, i8** %10, align 8
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %6
  %14 = phi i8* [ %11, %6 ], [ getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), %12 ]
  %15 = call i32 @emergency(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i32, i32* @STALL_TIMEOUT, align 4
  %17 = call i32 @sleep(i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @_exit(i32 %18) #3
  unreachable
}

declare dso_local i32 @emergency(i8*, i8*) #1

declare dso_local i32 @sleep(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
